Fixed z-index in `j-FeedbackButton`.

--- a/j-FeedbackButton/component.css
+++ b/j-FeedbackButton/component.css
@@ -1,6 +1,6 @@
 .ui-feedbackbutton-animate .ui-feedbackbutton { animation: feedbackbutton 1s infinite; }
 
-.ui-feedbackbutton { transition: all .2s; cursor: pointer; color: #fff; position: fixed; bottom: 20px; text-align: center; width: 50px; height: 50px; border-radius: 50%; }
+.ui-feedbackbutton { transition: all .2s; cursor: pointer; color: #fff; position: fixed; bottom: 20px; text-align: center; width: 50px; height: 50px; border-radius: 50%; z-index: 20; }
 .ui-feedbackbutton-left { left: 30px; }
 .ui-feedbackbutton-right { right: 30px; }
 .ui-feedbackbutton .ui-feedbackbutton-inner { margin-top: 17px; display: block; text-decoration: none }
@@ -9,7 +9,7 @@
 .ui-feedbackbutton .ui-feedbackbutton-close { display: none; background-color: #fff; transition: transform .2s; box-shadow: 0 0 10px 5px rgba(0,0,0,0.08); position: absolute; top: -8px; right: -8px; height: 23px; width: 23px; border-radius: 50%; }
 .ui-feedbackbutton .ui-feedbackbutton-close i { color: #333; display: inherit; margin-top: 4px; font-size: 16px; }
 .ui-feedbackbutton .ui-feedbackbutton-close:hover { transform: scale(1.1); }
-.ui-feedbackbutton:hover { width: 120px; border-radius: 4px; animation: none; }
+.ui-feedbackbutton:hover { width: auto; border-radius: 4px; padding-left: 10px; padding-right: 10px; animation: none; }
 .ui-feedbackbutton:hover .ui-feedbackbutton-inner span { display: inline; position: relative; bottom: 4px; }
 .ui-feedbackbutton:hover .ui-feedbackbutton-inner i { margin-right: 8px; }
 .ui-feedbackbutton:hover .ui-feedbackbutton-close { display: block; }
